[project]
name = "voice-meeting-scheduler"
version = "0.1.0"
description = "Voice Meeting Scheduler"
authors = [
    {name = "Abhishek Sanwal",email = "abhisheksanwal745@gmail.com"}
]
license = {text = "MIT LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toml (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
